# audio_ffmpeg_lib

./: .gitignore  .metadata  README.md  build-ffmpeg-android.sh  build-ffmpeg-ios.sh  build-ffmpeg-linux.sh  build-ffmpeg-macos.sh  fetch-dependencies.sh  pubspec.yaml
android/: build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/audio_ffmpeg_lib/: AudioFfmpegLibPlugin.kt
android/src/test/kotlin/com/example/audio_ffmpeg_lib/: AudioFfmpegLibPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/audio_ffmpeg_lib_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ffmpeg-vibeflow-audio/: usage  vcpkg.json
ios/: audio_ffmpeg_lib.podspec
ios/Classes/: AudioFfmpegLibPlugin.swift
lib/: audio_ffmpeg_lib.dart  audio_ffmpeg_lib_method_channel.dart  audio_ffmpeg_lib_platform_interface.dart
linux/: CMakeLists.txt  audio_ffmpeg_lib_plugin.cc  audio_ffmpeg_lib_plugin_private.h
linux/include/audio_ffmpeg_lib/: audio_ffmpeg_lib_plugin.h
linux/test/: audio_ffmpeg_lib_plugin_test.cc
macos/: audio_ffmpeg_lib.podspec
macos/Classes/: AudioFfmpegLibPlugin.swift
test/: audio_ffmpeg_lib_method_channel_test.dart  audio_ffmpeg_lib_test.dart
tooling/: check-windows-deps.ps1  ensure_ffmpeg_assets.sh  package_ffmpeg_assets.sh
windows/: CMakeLists.txt  audio_ffmpeg_lib_plugin.cpp  audio_ffmpeg_lib_plugin.h  audio_ffmpeg_lib_plugin_c_api.cpp  vcpkg.json
windows/include/audio_ffmpeg_lib/: audio_ffmpeg_lib_plugin_c_api.h
windows/test/: audio_ffmpeg_lib_plugin_test.cpp
